# haphazard-grind75-cpp

./: CMakeLists.txt  README.md  docker-compose.yaml
scripts/: gen_template.py
src/: CMakeLists.txt
src/g1/: CMakeLists.txt  g1.h  g1.md  s1.cmake  s1.cpp  s1.h  s1.md  s1.t.cmake  s1.t.cpp
src/g2/: CMakeLists.txt  g2.cpp  g2.h  s1.cmake  s1.cpp  s1.h  s1.md  s1.t.cmake  s1.t.cpp
src/g3/: g3.h  s1.cmake  s1.cpp  s1.h  s1.md  s1.t.cmake  s1.t.cpp
src/g4/: g4.h  s1.cmake  s1.cpp  s1.h  s1.md  s1.t.cmake  s1.t.cpp
tests/unit/: CMakeLists.txt  g2.t.cpp
